<resources>
    <string name="app_name">0321</string>
    <string name="rock_papper_scissor">Rock papper scissor</string>
    <string name="computer">Computer</string>
    <string name="player">Player</string>
    <string name="wait_paper">wait paper</string>
    <string name="play_choose_a_button">play choose a button</string>
    <string name="scissors">Scissors</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="win">You Win!!!</string>
    <string name="lose">You lose!!!</string>
    <string name="draw">Draw!!!</string>
</resources>